# human-ai-personalized-learning-lab

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-checks.yml
assets/: README.md
configs/: synthetic_lab.yaml
data/: README.md
docs/: ethics_and_privacy.md  methodology.md  report_template.md  synthetic_lab.md
matlab/: plot_learning_curves.m
notebooks/: 01_synthetic_learning_lab.ipynb
scripts/: run_synthetic_learning_lab.py
src/learninglab/: __init__.py  adaptation.py  audit.py  config.py  metrics.py  reporting.py  synthetic.py  visualization.py
tests/: test_audit.py  test_demo_pipeline.py  test_metrics.py  test_synthetic.py
