[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "human-ai-personalized-learning-lab"
version = "0.1.0"
description = "Synthetic-first Human-AI personalized learning research lab for studying adaptive feedback, learning gains, dependence, trust, and fairness"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
